--- a/font-end/src/css/base/content.css
+++ b/font-end/src/css/base/content.css
@@ -9,6 +9,7 @@
     grid-column: 1/2;
     border-right: 1px solid #D3D7DE;
     box-sizing:border-box;
+    display: inline-block;
 }
 
 
@@ -17,6 +18,7 @@
     overflow: hidden;
     display: grid;
     grid-template-rows:calc(100vh - 84px - 64px - 48px) 48px;
+    position:relative;
 }
 
 .content-sider-bar__right{
@@ -36,7 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 16px;
+    padding: 0 0 0 16px;
     height: 32px;
     line-height: 32px;
 }
@@ -95,12 +97,40 @@
 .content-sider-bar__right--content{
     grid-row: 2/3;
 }
-
-/* 
-.content-chlid.content-sider-bar__left {
-    width: 240px;
+.buttonHideShow {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 32px !important;
+    width: 16px !important;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 1px 11px 5px #cccccc;
+    background-color:white;
+    animation:3s all ease animationArrow;
+    cursor:pointer;
 }
 
-.content-child.content-sider-bar__right {
-    width: 320px;
-} */
+.buttonHideShowLeft {
+    left: 0;
+    border-radius: 0px 8px 8px 0px;
+}
+
+.buttonHideShowRight {
+    right: 0;
+    border-radius: 8px 0 0 8px;
+}
+
+.buttonHideShow:hover {
+    cursor: pointer;
+    background: #E2E4E9;
+    transition: 0.5s;
+}
+
+
+.buttonHideShow:active {
+    background: #f7f8fb;
+}
+
+
