--- a/font-end/src/css/base/input.css
+++ b/font-end/src/css/base/input.css
@@ -56,3 +56,14 @@ input[type="checkbox"] {
 .filter-content-active {
     background-color: #F0F2F4;
 }
+
+textarea.textarea {
+    width: 240px;
+    height: 76px;
+    resize: none;
+    border: 1px solid #d3d7de;
+    border-radius: 4px;
+    outline: none;
+    padding: 8px 16px;
+    box-sizing: border-box;
+}
