--- a/fontend/src/css/base/table.css
+++ b/fontend/src/css/base/table.css
@@ -1,9 +1,8 @@
 .table-container {
     grid-row: 1/2;
-    /* overflow-x: scroll; */
     display:grid;
     grid-template-rows: 32px calc(100vh - 84px - 64px - 48px - 32px);
-    /* overflow-y: hidden */
+    position: relative;
 }
 
 .tr{
