--- a/fontend/src/css/base/combobox.css
+++ b/fontend/src/css/base/combobox.css
@@ -53,11 +53,12 @@
     box-sizing: border-box;
     height: 32px;
     border-bottom: 1px solid #D3D7DE;
+    flex-wrap:wrap;
 }
 
 .combobox-data {
     position: absolute;
-    top: 105%;
+    top: 100%;
     width: 240px;
     left:-1px;
     border-radius: 0px 0px 4px 4px;
@@ -65,6 +66,7 @@
     display: none;
     z-index: 999;
     background-color: #ffffff;
+    margin-top: 2px;
 }
 .combobox-content-icon {
     margin-left: 8px;
@@ -76,7 +78,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 16px 0 16px;
+    padding: 0 8px 0 16px;
 }
 
 .combobox-data-child {
@@ -149,4 +151,37 @@ body {
 
 .combobox.filter-save.combobox-filter-top>.combobox-child.combobox-content {
     border-radius: 0;
+}
+
+.combobox-content-select-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #D3D7DE;
+    border-radius: 4px;
+    height: 24px;
+    padding-right: 4px;
+    padding-left: 8px;
+    margin:4px  0;
+    margin-right:4px;
+}
+
+.combobox-content-select-content-icon {
+    margin-left: 4px;
+}
+
+.combobox-mul>.combobox-content {
+    overflow: scroll;
+    overflow-x: hidden;
+    padding: 0 8px;
+}
+
+/* .combobox-content-select.combobox-mul-child {
+    display: flex;
+    flex-wrap: wrap;
+} */
+
+.div-disabled{
+    background-color: #F8F8F8;
+    cursor: no-drop !important;
 }
