--- a/fontend/src/css/base/table.css
+++ b/fontend/src/css/base/table.css
@@ -7,7 +7,7 @@
 
 .tr{
     display: grid;
-    grid-template-columns: 56px 56px 80px 100px 180px 150px 150px 150px 200px 200px 100px 150px 150px 150px 150px 150px 150px 150px 120px 200px;
+    grid-template-columns: 40px 56px 80px 100px 180px 150px 150px 150px 200px 200px 100px 150px 150px 150px 150px 150px 150px 150px 120px 200px;
     height: 32px;
     line-height: 32px;
     text-align: start;
@@ -77,6 +77,24 @@
     width: 24px;
     justify-content: center;
 }
+
 .td.tr-child-center:hover>span{
-    background: url('../../assets/img/icon_collection.svg') no-repeat -256px -128px;
+    background: url('../../assets/img/icon_collection.svg') no-repeat -255px -128px;
 }
+
+.tbody>.tr>.td:first-child>span {
+    display: none;
+}
+
+.tbody>.tr:hover>.td:first-child>span {
+    display: inline-block;
+}
+
+.tr>.tr-child-center:first-child {
+    padding-right: 0px;
+}
+
+.tr label {
+    display: flex;
+}
+
