search in combobox update customer

--- a/fontend/src/css/base/formdata.css
+++ b/fontend/src/css/base/formdata.css
@@ -57,6 +57,7 @@
   .form-container-content-child-title {
     margin-bottom: 16px;
     font-size: 16px;
+    width:100%;
   }
   
   .label-file {
