--- a/fontend/src/css/main.css
+++ b/fontend/src/css/main.css
@@ -83,3 +83,7 @@ body,button,textarea,input{
 .div-inline-block{
     display:inline-block;;
 }
+
+/* .filter-content::-webkit-scrollbar{
+    background-color: white;
+} */
