--- a/fontend/src/css/base/content.css
+++ b/fontend/src/css/base/content.css
@@ -68,7 +68,8 @@
     height: 76px;
     background: white;
     border-radius: 4px;
-    margin-top: 16px;overflow: scroll;
+    margin-top: 8px;
+    overflow: scroll;
     overflow-x: hidden;
 }
 
@@ -134,3 +135,118 @@
 }
 
 
+.filter-bottom {
+    display: flex;
+    align-items: center;
+    height: 56px;
+    flex-direction: row-reverse;
+    padding: 0 16px;
+    background-color: #EEF0F2;
+    border-top: 1px solid #D3D7DE;
+}
+
+.filter-bottom>button:first-child {
+    margin-left: 8px;
+}
+
+.filter-content-child-box-textarea-content.border-color-c {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 16px;
+}
+
+.filter-content-child-box-textarea-content.border-color-c .combobox-content-select-content {
+    width: max-content;
+}
+
+.el-input__wrapper {
+    border:1px solid #d3d7de !important;
+    display: flex;
+    box-shadow: none;
+}
+
+.el-input.el-input--prefix.el-input--suffix.el-date-editor.el-date-editor--date.el-tooltip__trigger.el-tooltip__trigger {
+    width: 240px !important;
+    font-size:13px;
+}
+
+.el-input__wrapper {
+    padding: 0 8px 0 16px;
+}
+
+i.el-icon.el-input__icon {
+    margin: 0;
+}
+
+span.el-input__prefix {
+    display: flex;
+    position: absolute;
+    right: 8px;
+}
+
+.el-picker-panel__icon-btn {
+    width: 32px;
+    height: 32px;
+    font-size: 16px;
+}
+
+span.el-date-table-cell__text {
+    border-radius: 4px !important;
+}
+
+.el-date-table td.current:not(.disabled) .el-date-table-cell__text {
+    background-color: #4262F0 !important;
+}
+
+span.el-date-table-cell__text {
+    width: 32px !important;
+    height: 32px !important;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+}
+
+.el-date-table td.today .el-date-table-cell__text {
+    color: #4262F0 !important;
+    font-weight: 400;
+}
+
+.el-date-table td.available:hover .el-date-table-cell__text {
+    background-color: #E7EBFD;
+    font-weight: 400;
+    color: #4262F0;
+}
+
+.el-date-picker__header {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.el-input__wrapper:hover {
+    border: 1px solid #7C869C !important;
+    box-shadow: none;
+    cursor: pointer;
+}
+.el-input__wrapper:hover span.el-input__prefix{
+    display:none;
+}
+
+.el-input__inner:hover {
+    cursor: pointer;
+}
+
+.el-input__wrapper.is-focus {
+    border: 1px solid #D3D7DE !important;
+    box-shadow: none;
+}
+
+.el-icon svg {
+    height: 16px !important;
+    width: 16px !important;
+}
+
+.table-button-right-chlid .button-background-white {
+    border: none !important;
+}
